src/test/deca/context/invalid/ineq_boolean_ineq_string.deca
// Description :
// 
//      Test syntaxiquement correct de true!="Bonjour"
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = true!="Bonjour";
}

